# clipse

./: .gitignore  AGENTS.md  CLAUDE.md  HELLO.md  Makefile  README.md  daytona-smoke-03b7d202ad.txt  daytona-smoke-1173dfdb22.txt  daytona-smoke-37faff237a.txt  daytona-smoke-8057127b09.txt  daytona-smoke-8bf42d7237.txt  daytona-smoke-e758bb3a91.txt  daytona-smoke-ea434c08af.txt  daytona-smoke-f949d61fd8.txt  go.mod  go.sum
agent/: AGENTS.md  README.md  pyproject.toml
agent/evals/: README.md  conftest.py  harness.py  judge.py  report.py  test_coder_blocked_evals.py  test_coder_evals.py  test_convergence_evals.py  test_docs_evals.py  test_harness_selftest.py  test_reviewer_evals.py
agent/evals/gh_shim/: gh
agent/src/clipse_agent/: __init__.py  contract.py  dac.py  tail.py  transcript.py  worker.py
agent/src/clipse_agent/backends/: __init__.py  contracts.py  daytona.py  github.py  local.py  session.py
agent/src/clipse_agent/graphs/: __init__.py  coder.py  reviewer.py  scribe.py
agent/src/clipse_agent/profiles/: __init__.py  coder.py  reviewer.py  scribe.py
agent/tests/: test_backend_contracts.py  test_coder_docs_profile.py  test_coder_graph.py  test_dac.py  test_daytona_backend.py  test_daytona_smoke.py  test_local_backend.py  test_profiles.py  test_reviewer_graph.py  test_reviewer_profile.py  test_scribe_graph.py  test_scribe_profile.py  test_tail.py  test_transcript.py  test_worker.py
scripts/smoke/baseline/: .gitignore  README.md  pyproject.toml
scripts/smoke/baseline/.github/workflows/: ci.yml
scripts/smoke/baseline/tests/: test_baseline.py
(+268 files in other folders)
