[project]
name = "greet"
version = "0.1.0"
description = "sample CLI built ticket-by-ticket by the clipse smoke test"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
greet = "greet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greet"]

[dependency-groups]
dev = ["pytest>=8"]
